Font size fixes on small screens

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -85,3 +85,17 @@ h3 {
 .casetestimonial .contact {
 	font-weight: bold;
 }
+
+@media (max-width: 500px) {
+    h1 {
+        font-size: 22px !important;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+}
